# wx

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
src/wx/: cli.py
tests/: test_main.py  test_wx.py
